--- a/To-Do-list/Jenkinsfile
+++ b/To-Do-list/Jenkinsfile
@@ -1,10 +1,33 @@
 pipeline{
     agent any
     stages { 
-        stage("Running docker compose"){ 
+        stage("Building docker images"){ 
             steps{ 
                 script { 
-                    sh "docker compose -f To-Do-list/docker-compose.yml up -d" 
+                    sh "docker image build -t localhost:5000/flask-app:v1 To-Do-list/backend/. " 
+                    sh "docker image build -t localhost:5000/nginx:v1 To-Do-list/frontend/. "
+                }
+            }
+        }
+        stage("Building a local registry"){ 
+            steps{ 
+                script { 
+                    sh "docker run -d -p 5000:5000 --restart=always --name registry registry:2"
+                }
+            }
+        }
+        stage("Pushing images to local registry"){ 
+            steps{ 
+                script { 
+                    sh "docker image push localhost:5000/flask-app:v1"
+                    sh "docker image push localhost:5000/nginx:v1"
+                }
+            }
+        }
+        stage("Running docker compose "){ 
+            steps{ 
+                script { 
+                    sh "docker compose -f To-Do-list/docker-compose.yml up -d"
                 }
             }
         }
