--- a/To-Do-list/docker-compose.yml
+++ b/To-Do-list/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    build: ./frontend
+    image: locahost:5000/nginx:v1
     ports:
       - "80:80"
     depends_on:
@@ -8,7 +8,7 @@ services:
     restart: unless-stopped
 
   backend:
-    build: ./backend
+    image: localhost:5000/flask-app:v1
     ports:
       - "5000:5000"
     depends_on:
